--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -72,7 +72,7 @@ header, #header { position:relative; background-color:#33353f; width:100%}
 #header dl .u_menu_r a { right:15px; top: 12px; background:url(../imgs/header_ico.png) no-repeat 50% -50px;}
 
 /* Nav */
-nav, #nav { background:url(../imgs/container_bg.jpg) repeat-x 0 0 #eaeef1; width:100%; height:100%; overflow:hidden}
+nav, #nav { background:url(../imgs/container_bg.jpg) repeat-x 0 0 #eaeef1; width:100%; overflow: hidden; margin-bottom: 60px;}
 nav h1, #nav h1 { background:url(../imgs/h1_img.png) no-repeat 50% 50% / contain; font-size:0; min-height:70px; display: inline-block; width:96%; margin: 5% 3%;}
 #nav li { margin:0 3% 3%}
 #nav li a {background:url(../imgs/main_nav.png) no-repeat 0 0 / contain; display:block; font-size:0; min-height:100px; width:100%; margin: 0 auto}
@@ -83,7 +83,7 @@ nav h1, #nav h1 { background:url(../imgs/h1_img.png) no-repeat 50% 50% / contain
 
 /* Sub */
 img { width:100%}
-.section {color:#666666}
+.section {color:#666666; height: 100%; margin-bottom: 112px;}
 .section h1 { font-size:0; text-indent:-999px; min-height:105px}
 .section h1.tit1 { background:url(../imgs/title_1.jpg) no-repeat 50% 0 / contain #ff999a}
 .section h1.tit2 { background:url(../imgs/title_2.jpg) no-repeat 50% 0 / contain #99cc01}
@@ -107,26 +107,26 @@ img { width:100%}
 .section_schedule li:nth-child(3) { width:auto; color:#676767}
 .section_border .group_border { border-bottom: 1px solid #c8c7cc; text-align:right; margin: 0 0 30px 0}
 .section_border .group_border+p { text-align:left; font-size:22px; font-weight:bold; margin: 0 0 20px 0}
-.section_map { background:url(../imgs/im3_1.jpg) no-repeat 0 0 / cover; width:100%; min-height:440px; margin: 0 0 20px 0; position: relative}
+.section_map { background:url(../imgs/im3_1.jpg) no-repeat 0 0 / cover; width:100%; min-height:427px; margin: 0 0 20px 0; position: relative}
 .section_map li a { position:absolute; display:inline-block; font-size:0}
-.section_map li.space_01 a { background:url(../imgs/im3_1_1.png) no-repeat 0 0; width:112px; height:30px; right:72px; top:21px}
-.section_map li.space_02 a { background:url(../imgs/im3_1_2.png) no-repeat 0 0; width:144px; height:72px; right:141px; top:58px}
-.section_map li.space_03 a { background:url(../imgs/im3_1_3.png) no-repeat 0 0; width:109px; height:70px; right:150px; top:111px}
-.section_map li.space_04 a { background:url(../imgs/im3_1_4.png) no-repeat 0 0; width:94px; height:199px; right:46px; top:151px}
-.section_map li.space_05 a { background:url(../imgs/im3_1_5.png) no-repeat 0 0; width:85px; height:53px; right:44px; bottom:30px}
-.section_map li.space_06 a { background:url(../imgs/im3_1_6.png) no-repeat 0 0; width:166px; height:48px; right:134px; bottom:35px}
-.section_map li.space_07 a { background:url(../imgs/im3_1_7.png) no-repeat 0 0; width:101px; height:39px; right:304px; bottom:57px}
-.section_map li.space_08 a { background:url(../imgs/im3_1_8.png) no-repeat 0 0; width:102px; height:151px; left:96px; bottom:68px}
-.section_map li.space_09 a { background:url(../imgs/im3_1_9.png) no-repeat 0 0; width:76px; height:31px; left:207px; bottom:237px}
-.section_map li.space_01 a:hover { background:url(../imgs/im3_1_1_w.png) no-repeat 0 0;}
-.section_map li.space_02 a:hover { background:url(../imgs/im3_1_2_w.png) no-repeat 0 0;}
-.section_map li.space_03 a:hover { background:url(../imgs/im3_1_3_w.png) no-repeat 0 0;}
-.section_map li.space_04 a:hover { background:url(../imgs/im3_1_4_w.png) no-repeat 0 0;}
-.section_map li.space_05 a:hover { background:url(../imgs/im3_1_5_w.png) no-repeat 0 0;}
-.section_map li.space_06 a:hover { background:url(../imgs/im3_1_6_w.png) no-repeat 0 0;}
-.section_map li.space_07 a:hover { background:url(../imgs/im3_1_7_w.png) no-repeat 0 0;}
-.section_map li.space_08 a:hover { background:url(../imgs/im3_1_8_w.png) no-repeat 0 0;}
-.section_map li.space_09 a:hover { background:url(../imgs/im3_1_9_w.png) no-repeat 0 0;}
+.section_map li.space_01 a { background:url(../imgs/im3_1_1.png) no-repeat 0 0 / contain; width:112px; height:30px; right:65px; top:17px}
+.section_map li.space_02 a { background:url(../imgs/im3_1_2.png) no-repeat 0 0 / contain; width:144px; height:72px; right:134px; top:58px}
+.section_map li.space_03 a { background:url(../imgs/im3_1_3.png) no-repeat 0 0 / contain; width:109px; height:70px; right:144px; top:113px}
+.section_map li.space_04 a { background:url(../imgs/im3_1_4.png) no-repeat 0 0 / contain; width:94px; height:199px; right:39px; top:147px}
+.section_map li.space_05 a { background:url(../imgs/im3_1_5.png) no-repeat 0 0 / contain; width:85px; height:53px; right:39px; bottom:21px}
+.section_map li.space_06 a { background:url(../imgs/im3_1_6.png) no-repeat 0 0 / contain; width:166px; height:48px; right:127px; bottom:27px}
+.section_map li.space_07 a { background:url(../imgs/im3_1_7.png) no-repeat 0 0 / contain; width:101px; height:39px; right:296px; bottom:49px}
+.section_map li.space_08 a { background:url(../imgs/im3_1_8.png) no-repeat 0 0 / contain; width:102px; height:151px; left:89px; bottom:62px}
+.section_map li.space_09 a { background:url(../imgs/im3_1_9.png) no-repeat 0 0 / contain; width:76px; height:31px; left:208px; bottom:227px}
+.section_map li.space_01 a:hover { background:url(../imgs/im3_1_1_w.png) no-repeat 0 0 / contain;}
+.section_map li.space_02 a:hover { background:url(../imgs/im3_1_2_w.png) no-repeat 0 0 / contain;}
+.section_map li.space_03 a:hover { background:url(../imgs/im3_1_3_w.png) no-repeat 0 0 / contain;}
+.section_map li.space_04 a:hover { background:url(../imgs/im3_1_4_w.png) no-repeat 0 0 / contain;}
+.section_map li.space_05 a:hover { background:url(../imgs/im3_1_5_w.png) no-repeat 0 0 / contain;}
+.section_map li.space_06 a:hover { background:url(../imgs/im3_1_6_w.png) no-repeat 0 0 / contain;}
+.section_map li.space_07 a:hover { background:url(../imgs/im3_1_7_w.png) no-repeat 0 0 / contain;}
+.section_map li.space_08 a:hover { background:url(../imgs/im3_1_8_w.png) no-repeat 0 0 / contain;}
+.section_map li.space_09 a:hover { background:url(../imgs/im3_1_9_w.png) no-repeat 0 0 / contain;}
 .section_map+p {text-align:left; margin: 0 0 30px 0; font-size:20px}
 
 
@@ -157,31 +157,41 @@ button { cursor:pointer; border-radius: 7px; margin: 0 0 8%}
 #footer .copyright { float:right; font-style:normal; font-size:11px}
 address { width:96%}
 
-/* Mobile 0 ~ 320 */
+/* Mobile 0 ~ 479 */
 @media all and (min-width:0px) and (max-width:479px) { 
 nav h1, #nav h1 {width:70%; margin: 3%}
 .section h1 { min-height: 53px}
+.section_calendar {padding: 3% 3% 10%;}
 .section_schedule li { font-size:95%}
 .section>.section_schedule:last-of-type { margin: 3% !important}
 .section_schedule { padding: 2% !important}
-.section_border {padding: 2% 2% 0;}
+.section_border {padding: 3% 3% 0;}
+.section_border.map {padding: 2% 2% 0;}
 .section_border .group_border {margin: 0 0 8% 0;}
 .section_border .group_border+p,
 .section_border .group_block dt,
 .section_border .group_block dd p,
 .section_map+p {font-size:95%}
-.section_map { min-height:202px}
+.section_map { min-height:208px}
+.section_map li.space_01 a { background:url(../imgs/im3_1_1.png) no-repeat 0 0 / contain; width: 63px; height: 17px; right: 32px; top: 8px;}
+.section_map li.space_02 a { background:url(../imgs/im3_1_2.png) no-repeat 0 0 / contain; width: 61px; height: 31px; right: 74px; top: 28px;}
+.section_map li.space_03 a { background:url(../imgs/im3_1_3.png) no-repeat 0 0 / contain; width: 47px; height: 30px; right: 73px; top: 52px;}
+.section_map li.space_04 a { background:url(../imgs/im3_1_4.png) no-repeat 0 0 / contain; width: 48px; height: 101px; right: 19px; top: 64px;}
+.section_map li.space_05 a { background:url(../imgs/im3_1_5.png) no-repeat 0 0 / contain; width: 43px; height: 28px; right: 19px; bottom: 10px;}
+.section_map li.space_06 a { background:url(../imgs/im3_1_6.png) no-repeat 0 0 / contain; width: 78px; height: 23px; right: 64px; bottom: 14px;}
+.section_map li.space_07 a { background:url(../imgs/im3_1_7.png) no-repeat 0 0 / contain; width: 44px; height: 17px; right: 145px; bottom: 23px;}
+.section_map li.space_08 a { background:url(../imgs/im3_1_8.png) no-repeat 0 0 / contain; width: 49px; height: 80px; left: 47px; bottom: 21px;}
+.section_map li.space_09 a { background:url(../imgs/im3_1_9.png) no-repeat 0 0 / contain; width: 35px; height: 15px; left: 99px; bottom: 111px;}
 
 .btn_m {font-size:95%; padding: 2% 5%;}
 .btn_s {font-size:88%; padding: 2% 5%;}
-.btn_s.green.clock {font-size:95%; padding: 3% 10%; background: url(../imgs/ico_clock_s.png) no-repeat 0 0 #99cc01;}
+.btn_s.green.clock {font-size:95%; padding: 3% 7% 3% 11%; background: url(../imgs/ico_clock_s.png) no-repeat 11px 9px #99cc01;}
+.btn_s.green.clock:hover {background: url(../imgs/ico_clock_s.png) no-repeat 11px 9px #a5a5a5;}
  
-
 #footer dd { font-size:80%}
 address { width:93%;}
 #footer .copyright {font-size:68%}
 #footer .tel {width: 103px;}
-
 }
 
 @media all and (min-width:480px) { 
